--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -39,5 +39,5 @@ jobs:
       run: npm install --global surge
       
     - name: Deploying on surge
-      run: surge ./build bootcamp-project001.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://bootcamp-project001.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
       
