Update surge build command

--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -36,8 +36,8 @@ jobs:
       run: npm build
       
     - name: Installing surge
-      run: npm install --global surge
+      run: npm install -g surge
       
-    - name: Deploying on surge
-      run: surge ./build http://bootcamp-project001.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+    - name: Deploying using surge
+      run: surge ./build bootcamp-project001.surge.sh --token ${{secrets.SURGE_TOKEN}}  
       
